# mongoLib

./: CMakeLists.txt  README.md
include/: library.h
src/: library.c
test/: test_main.c
